[package]
authors = ["Vladas Zakrevksis <146100@gmail.com>"]
name = "rlpx-test"
version = "0.1.0"
edition = "2021"

[dependencies]
url = "2.3.1"
log = "0.4.17"
rlp = "0.5.2"
rand = "0.8.5"
snafu = "0.7.4"
derivative = "2.2.0"
tokio = { version = "1.27.0", features = ["full"] }
parity-crypto = { version = "0.9.0", features = ["publickey"] }
